Cermati.com Business Intelligence Analyst | SmartRecruiters. mSix Careers - Manager, Global COE Business Intelligence and Data Governance. CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. Associate Business Intelligence Developer - Exsilio - Career Page. Apttus Careers - Business Intelligence Operations Analyst. Job @ Project A Ventures (Berlin): Business Intell... | JOIN. Job @ Project A Ventures (Berlin): Business Intell... | JOIN. Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300. SonetJob | Offre d'emploi - Ressources Humaines - Business Analyst – Business Intelligence Analysis Team. Business Intelligence Analyst | Current Opportunities. Financial Business System Analyst - IntelliPro Group Inc. - Career Page. Accolade, Inc. Business Intelligence Developer I (Junior level) | SmartRecruiters. CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. Miratech Business Intelligence Analyst | SmartRecruiters. Bosch Group Business Intelligence - Internship | SmartRecruiters. Job Application for Senior Digital and Business Intelligence Analyst at Vonage. MediaCom Careers - Senior Business Intelligence Engineer. Correct Craft Business Intelligence Analyst | SmartRecruiters. Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth. Senior Manager, Business Intelligence and Insights - Experian Careers. Job Application for Director of Sales Business Intelligence  at Snowflake. Job Application for Senior Business Intelligence Analyst (m/f/d) at heycar. Finance Business System Analyst - IntelliPro Group Inc. - Career Page. Financial Business Data Analyst - IntelliPro Group Inc. - Career Page. Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page. Job Application for Senior Financial and Business Intelligence Analyst  at MiQ Digital. Job Application for Senior Business Intelligence Specialist at PayU. Capgemini Japan Careers - Business Intelligence Analyst. Capgemini

--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light">Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oWOM9fwp&__jvst=Employee+Referral%3a+Eligible&__jvsd=sVjqMgwb&__jvsc=Twitter&bid=neUboMwY'>Apttus Careers - Business Intelligence Operations Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oWOM9fwp&__jvst=Employee+Referral%3a+Eligible&__jvsd=sVjqMgwb&__jvsc=Twitter&bid=neUboMwY'>Apttus Careers - Business Intelligence Operations Analyst</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -177,7 +177,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -254,7 +254,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -275,7 +275,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -340,7 +340,7 @@ using?...</p>
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -348,7 +348,7 @@ using?...</p>
 <p><span class="badge badge-light">Bellevue, WA  Bellevue, WA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://doclerholding.recruitee.com/o/senior-business-intelligence-analyst'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://doclerholding.recruitee.com/o/senior-business-intelligence-analyst'>
       Senior Business Intelligence Analyst - Docler Holding
     </a></h5> 
 <p><span class="badge badge-light">Luxembourg Luxembourg</span></p>
@@ -419,7 +419,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/business-systems-analyst-business-intelligence-3985'>Business Analyst, Business Intelligence - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/business-systems-analyst-business-intelligence-3985'>Business Analyst, Business Intelligence - Genesys Careers</a></h5> 
 <p><span class="badge badge-light">United States California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
