--- a/android-developer.html
+++ b/android-developer.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hiring/0207f1c9-5257-49f5-b74a-11ac84b038ec'>  - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hiring/0207f1c9-5257-49f5-b74a-11ac84b038ec'>  - Android Developer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346128-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346128-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -168,7 +168,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211079658/Android-Developer?s=101089'>Android Developer | CV-Library.co.uk | 211079658</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211079658/Android-Developer?s=101089'>Android Developer | CV-Library.co.uk | 211079658</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -184,7 +184,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amaro/735bc0b7-4743-4a54-b7f7-0a986f83706a'>AMARO - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/amaro/735bc0b7-4743-4a54-b7f7-0a986f83706a'>AMARO - Android Developer</a></h5> 
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -192,7 +192,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -200,7 +200,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
 	
     Apply for Lead Android Developer -  Woking, United Kingdom - IT and Internet - SS003 - Find a job, build a career
 
@@ -216,7 +216,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
+<h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Junior Android Developer We are looking for a hands-on Android App Developer 
 with a passion for creating innovative digital experiences, to help us launch the?...</p>
@@ -326,7 +326,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
+<h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -374,7 +374,7 @@ Experienced Android Application Developer at Yor Labs Inc in Portland | Android 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
 Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -398,7 +398,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -450,7 +450,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -459,7 +459,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p>Hace 3 d?as ... Android Developer. Santiago. Engineering ? Software Development. Full Time. 
 Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?...</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/android-mobile-software-developer-cmn3Z-63er6AqLaKiznY58'>Android Mobile Software Developer #0157 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/android-mobile-software-developer-cmn3Z-63er6AqLaKiznY58'>Android Mobile Software Developer #0157 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -483,7 +483,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Flink1/743999696997351-senior-android-developer'>Flink Senior Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flink1/743999696997351-senior-android-developer'>Flink Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
