--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oCQ89fwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nVgmpMwd'>Palo Alto Networks Careers - Senior Site Reliability Engineer (Cloud Infrastructure)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289376-staff-site-reliability-engineer'>Optimizely Staff Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/469276-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<h5><a href='https://archilogic.join.com/jobs/469276-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -121,7 +125,7 @@
 <p>Oct 21, 2019 ... Expedia. Are you looking to join a team that builds foundational infrastructure, 
 automation, and tools at a large scale? Are you passionate about security,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior or Lead Site Reliability Engineer Government Cloud / Top Security 
 Clearance Required. California - San Francisco Virginia - Herndon?...</p>
@@ -142,7 +146,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -212,7 +216,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -278,11 +282,11 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -393,7 +397,7 @@ believes?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Site Reliability Engineer at leadtech.</p>
 <hr/>
-<h5><a href='https://silverstripe.workable.com/jobs/1155618'>Site Reliability Engineer - SilverStripe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://silverstripe.workable.com/jobs/1155618'>Site Reliability Engineer - SilverStripe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... We are looking for an experienced Site Reliability Engineer to join our Platforms 
 team based in Wellington. At SilverStripe, our mission is to help everyone have?...</p>
@@ -447,12 +451,6 @@ Linux experience, network knowledge, scripting abilities, information security a
 <h5><a href='http://jobs.jobvite.com/backcountry/job/oJKvafwS'>Backcountry Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/algorithmia/jobs/4477002002?gh_jid=4477002002'>Job Application for Site Reliability Engineer at Algorithmia</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 10, 2019 ... Already trusted by over 100k developers and major enterprise customers, 
-Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
-?...</p>
 <hr/>
 
 
